tests/NormalTests/paczka1/fuzzy1/90600468.err
Error in line 8: S44 S496 89,6
Error in line 3: jgQWRD S44 5,0
Error in line 20: jgQWRD A684 19,7
Error in line 23: AiZL S496 1,8
